LU-7922 osd-ldiskfs: ROOT inode allocation fix.

ROOT inode was getting allocated near the end of disk.To
resolve this problem goal inode is set to guarantee low
inode allocation for the  directories except precreated
objects.

Seagate-bug-id: MRP-2106
Change-Id: I39de350531aa018a112653937055af5937f14761
Signed-off-by: Lokesh Nagappa Jaliminche <lokesh.jaliminche@seagate.com>