lustre/osd-ldiskfs/osd_handler.c
@@ -79,8 +79,8 @@
 /* llo_* api support */
 #include <md_object.h>
 #include <lustre_quota.h>
-
 #include <lustre_linkea.h>
+#define INIT_GOAL_INODE 2
 
 int ldiskfs_pdo = 1;
 CFS_MODULE_PARM(ldiskfs_pdo, "i", int, 0644,
@@ -2325,11 +2325,25 @@ static int osd_mkfile(struct osd_thread_info *info, struct osd_object *obj,
 	    !dt_object_remote(hint->dah_parent))
 		parent = hint->dah_parent;
 
-        inode = ldiskfs_create_inode(oth->ot_handle,
-                                     parent ? osd_dt_obj(parent)->oo_inode :
-                                              osd_sb(osd)->s_root->d_inode,
-                                     mode);
-        if (!IS_ERR(inode)) {
+	if (parent == NULL) {
+		struct inode *dir;
+
+		dir = osd_sb(osd)->s_root->d_inode;
+		if (S_ISDIR(mode) &&
+		    (LDISKFS_SB(dir->i_sb)->s_inode_goal == 0)) {
+			LDISKFS_SB(dir->i_sb)->s_inode_goal = INIT_GOAL_INODE;
+			inode = ldiskfs_create_inode(oth->ot_handle, dir, mode);
+			LDISKFS_SB(dir->i_sb)->s_inode_goal = 0;
+		} else {
+			inode = ldiskfs_create_inode(oth->ot_handle, dir, mode);
+		}
+	} else {
+			inode = ldiskfs_create_inode(oth->ot_handle,
+						osd_dt_obj(parent)->oo_inode,
+						mode);
+	}
+
+	if (!IS_ERR(inode)) {
 		/* Do not update file c/mtime in ldiskfs. */
 		inode->i_flags |= S_NOCMTIME;
 
